auth completed dashboard ui completed but firestore not work

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 
     <p>Dont have a account? <a href="./index.html">Sign up</a></p>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="blogging.js"></script>
+    <script type="module" src="index.js"></script>
 
 </body>
 
