--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <p>alraedy have a account? <a href="./login.html">Login</a></p>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="blogging.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
